# SN-50

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml
.github/workflows/: ci.yml
devkit/: Cargo.toml  README.md
player/: Cargo.toml  README.md
player/src/: main.rs
tinlib/: Cargo.toml  README.md
tinlib/examples/: cartridge.rs
tinlib/src/: lib.rs
tinlib/src/cartridge/: chunk.rs  error.rs  mod.rs
tinlib/src/common/: coord.rs  error.rs  mod.rs  size.rs
tinlib/src/graphic/: color.rs  font.rs  glyph.rs  mod.rs  palette.rs
tinlib/src/machine/: code.rs  input.rs  memory.rs  mod.rs  ram.rs  screen.rs  vram.rs
tinlib/src/map/: mod.rs
